30Aug99=======================================================================
1. remove -@ as well as \d from SSIDs for spots
29Aug99=======================================================================
1. Added msg command to allow the changing of To, From, Subject and so on the
messages. This seems particularly important just now as a whole raft of G3's
seem to be putting out non private bulls to callsigns.
2. While I am at set messages to TO fields that appear to be users to private
if they have been sent as bulls.
3. Add DISTROs, if a callsign field appears in /spider/msg/distro in upper
use that as a list of callsigns to send further. Note this is potentially
recursive as callsigns in a distro can be distros.
25Aug99=======================================================================
1. check the date of a WWV much more carefully.
24Aug99=======================================================================
1. Prevented spots with lowercase callsigns being forwarded. This opens a
much bigger can of worms which I shall have to address later.
17Aug99=======================================================================
1. all protocol except PC29 containing %XX characters will be dumped.
2. Changed console.pl so that if you start typing it moves the top window
back to the bottom.
19Jul99=======================================================================
1. Added iota and qra clauses to sh/dx as well, these take optional arguments
and will look for the appropriate strings.
17Jul99=======================================================================
1. Started database integration.
2. added qsl clause to sh/dx that searches for qsl or via in the dx info
16Jul99=======================================================================
1. drop frames with 'illegal' characters in them (but pass frames with 
embedded %XX characters).
15Jul99=======================================================================